# spindec

./: .gitignore  .hgignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README  README.md  TODO  hgpush.sh  hgpush_bitbucket.sh  profile_4C.xml
cmake/: FindMKL.cmake
draft/SpinDonor/: SpinDonor.h  test_spindonor.cpp
include/: BoostEigen.h  Dipolar.h  ElectronSpin.h  Errors.h  ExtendEigen.h  InteractionType.h  MathPhysConstants.h  Named.h  NuclearSpin.h  SingleSpinBasis.h  SingleSpinBasis2.h  SingleSpinZeemanBasis.h  Spin.h  SpinBasis.h  SpinHamiltonian.h  SpinInteraction.h  SpinInteractionEdge.h  SpinInteractionGraph.h  SpinInteractionNode.h  SpinInteractionType.h  SpinInteractionVertex.h  SpinInteractions.h  SpinState.h  SpinVector.h  Spins.h  UniformMagneticField.h  ZeemanBasis.h
include/SpinDec/: AdiabaticLabel.h  BoostEigen.h  CCE.h  CPMG.h  CPMGDephasing.h  CSDProblem.h  Cluster.h  ClusterDatabase.h  ClusterDatabaseEntry.h  Constants.h  CrystalBasis.h  CrystalStructure.h  DensityOperator.h  DiamondCubic.h  Dipolar.h  Eigenspectrum.h  ElectronSpinParameters.h  Errors.h  EvolutionOperator.h  FileProperties.h  FreeEvolution.h  HermitianEigenspectrum.h  Hyperfine.h  HyperfineParameters.h  IdentityOperator.h  IdentityPulse.h  IsingHyperfine.h  LatticeVectors.h  MatrixRepresentation.h  NuclearSpinParameters.h  PiPulse.h  Pulse.h  PulseExperiment.h  PulseSequence.h  PulseSequenceBase.h  RandomNumberGenerator.h  ReducedProblem.h  Sign.h  SimpleCubicLatticeVectors.h  SpinBasis.h  (+31 more)
include/todo/: HahnSpinEcho.hpp  KohnLuttingerContact.hpp  argvparser.h  cceincludes.hpp  cceread.hpp  cluster_heuristics.hpp  constants.hpp  dipolar.hpp  elecNucSpin.hpp  ft.hpp  lattice.hpp  qoperator.hpp  spinHamiltonian.hpp  spincoupling.hpp  statevector.hpp  stdincludes.hpp  threevector.hpp
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
old_build/Linux/: Makefile
old_build/MacOSX/: Makefile
profile/: loop_prof_1414085460.xml  loop_prof_loops_1414085460.dump
src/: AdiabaticLabel.cpp  BoostEigen.cpp  BoostEigen.h  CCE.cpp  CPMG.cpp  CPMGDephasing.cpp  CPMGExperiment.cpp  CSDProblem.cpp  CentralSpinSystem.cpp  Cluster.cpp  ClusterDatabase.cpp  ClusterDatabaseEntry.cpp  Constants.cpp  CrystalBasis.cpp  CrystalLattice.cpp  CrystalStructure.cpp  DensityOperator.cpp  DiamondCubic.cpp  Dipolar.cpp  Dipolar.h  Edge.cpp  Edge.h  EdgeContents.cpp  EdgeContents.h  Eigenspectrum.cpp  Eigenspectrum.h  ElectronSpin.cpp  ElectronSpin.h  ElectronSpinParameters.cpp  Errors.cpp  Errors.h  EvolutionOperator.cpp  ExtendEigen.cpp  FileProperties.cpp  FreeEvolution.cpp  HermitianEigenspectrum.cpp  HermitianEigenspectrum.h  Hyperfine.cpp  Hyperfine.h  HyperfineParameters.cpp  (+102 more)
src/graveyard/: Edge.cpp  GraphContents.cpp  README  UndirectedGraph.cpp  Vertex.cpp
src/include/: BoostEigen.h  Errors.h  MathPhysConstants.h  SingleSpinBasis.h  SpinBasis.h  SpinInteractionEdge.h  SpinInteractionVertex.h  SpinState.h  SpinVector.h  UniformMagneticField.h
src/include/SpinDec/: AdiabaticLabel.h  BoostEigen.h  CCE.h  CPMG.h  CPMGDephasing.h  CPMGExperiment.h  CSDProblem.h  CentralSpinSystem.h  Cluster.h  ClusterDatabase.h  CrystalBasis.h  CrystalLattice.h  CrystalStructure.h  DensityOperator.h  DiamondCubic.h  Dipolar.h  Eigenspectrum.h  ElectronSpin.h  ElectronSpinParameters.h  Errors.h  EvolutionOperator.h  FileProperties.h  FreeEvolution.h  HermitianEigenspectrum.h  Hyperfine.h  HyperfineParameters.h  IdentityOperator.h  IdentityPulse.h  IsingHyperfine.h  MathPhysConstants.h  MatrixRepresentation.h  NuclearSpin.h  PiPulse.h  Pulse.h  PulseExperiment.h  PulseSequence.h  PulseSequenceBase.h  RandomNumberGenerator.h  Sign.h  SimpleCubicLatticeVectors.h  (+29 more)
src/include/SpinDec/graveyard/: Edge.h  GraphContents.h  README  UndirectedGraph.h  Vertex.h
src/main/: TEST.cpp  TEST_20112013.cpp
src/todo/: HahnSpinEcho.cpp  KohnLuttingerContact.cpp  Spins.cpp  argvparser.cpp  cceread.cpp  cluster_heuristics.cpp  dipolar.cpp  elecNucSpin.cpp  ft.cpp  lattice.cpp  qoperator.cpp  spinHamiltonian.cpp  spincoupling.cpp  statevector.cpp  threevector.cpp
src/todo/main/: C12.cpp  couplings.cpp  dFF.cpp  dfdB.cpp  directflipflop.cpp  donornucbath.cpp  idFF.cpp  instdiff.cpp  memoryTime.cpp  owpT2.cpp  owpWeights.cpp  process_raw_donornucbath.cpp
tests/: spindec-test-boosteigen.cpp  spindec-test-cce.cpp  spindec-test-cce1.cpp  spindec-test-cce2.cpp  spindec-test-crystalstructure.cpp  spindec-test-evolution.cpp  spindec-test-misc.cpp  spindec-test-spinbasis.cpp  spindec-test-spindonor.cpp  spindec-test-spinparameters.cpp  test_boosteigen.cpp  test_cce.cpp  test_crystalstructure.cpp  test_evolution.cpp  test_evolution2.cpp  test_misc.cpp  test_spinbasis.cpp  test_spindonor.cpp  test_spinparameters.cpp
